<resources>
    <string name="app_name">QuanLyTaiSanBT2</string>
    <string name="Asset">Tài sản</string>
    <string name="People">Con người</string>
    <string name="Hint_TypeName">Nhập tên</string>
    <string name="Hint_TypeValue">Nhập giá trị</string>
    <string name="TV_ListAssets">Tài sản: </string>
    <string name="Add">Thêm</string>
    <string name="ViewResult">Xem kết quả</string>
    <string name="textviewListPeople">Danh sách Con người</string>
    <string name="textviewListAsset">Danh sách Tài sản</string>
    <string name="buttonBack">Thoát</string>


</resources>