<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <RadioGroup
        android:id="@+id/radioGroupPeopleAndAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radiobuttonPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:text="@string/People" />

        <RadioButton
            android:id="@+id/radiobuttonAsset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Asset" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layoutPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPeopleAndAsset">

        <EditText
            android:id="@+id/editTextPeople"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/text_sise_input_text"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/Hint_TypeName"/>

        <TextView
            android:id="@+id/textViewListAssets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/TV_ListAssets"
            android:textColor="@color/textAssets" />

        <Button
            android:id="@+id/buttonAddPeople"
            android:text="@string/Add"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/showResult"
            android:text="@string/ViewResult"
            android:textColor="@color/textResult"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAssets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPeople">

        <EditText
            android:id="@+id/editTextAsset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:autofillHints="no"
            android:background="@drawable/edit_text_border"
            android:hint="@string/Hint_TypeName"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/text_sise_input_text" />

        <EditText
            android:id="@+id/editTextValueAsset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/Hint_TypeValue"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="@dimen/text_sise_input_text" />

        <Button
            android:id="@+id/buttonAddAsset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="@string/Add"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/assetResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/ViewResult"
            android:textColor="@color/textResult" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>